unpackaged/main/default/objects/csmrgp__Duplicate_Case__c/csmrgp__Duplicate_Case__c.object-meta.xml
<CustomObject>
    <label>Duplicate Case</label>
    <nameField>
        <displayFormat>DC-{000000}</displayFormat>
        <label>Duplicate Case Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Duplicate Cases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>