unpackaged/main/default/objects/csmrgp__Duplicate_Case__c/fields/csmrgp__Case__c.field-meta.xml
<CustomField>
    <fullName>csmrgp__Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Duplicate Cases</relationshipLabel>
    <relationshipName>Duplicate_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>