unpackaged/main/default/objects/csmrgp__Duplicate_Case__c/fields/csmrgp__Case_Status__c.field-meta.xml
<CustomField>
    <fullName>csmrgp__Case_Status__c</fullName>
    <description>Status of associated Case</description>
    <label>Case Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>